fix z-index issue

--- a/marketing/styles/elements/_content.scss
+++ b/marketing/styles/elements/_content.scss
@@ -1,6 +1,5 @@
 .content {
 
-  z-index: 3;
   position: relative;
 
   .info-row {
